Added Unit & Integration Tests. Fail safe plugins enabled for Maven Surefire.